# stereo_dense_reconstruction

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.xml  package.xml  setup.sh
calibration_files/: cam_stereo_agv_jackal.yml
cfg/: CamToRobotCalibParams.cfg
scripts/: run_dense_reconstruction_service.bash
src/: dense_reconstruction.cpp  dense_reconstruction_service.cpp  stereo_rectify.cpp
srv/: StereoReconstructionSrv.srv
